<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator by Junaid</string>
    <string name="action_settings">Settings</string>
    <string name="displayBox">0</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_point">.</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_mult">×</string>
    <string name="button_divide">÷</string>
    <string name="button_equals">=</string>
    

</resources>
